--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^1.1.1",
-    "webpack": "^4.44.2"
+    "webpack": "^5.71.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "cypress": "^7.0.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.1",
     "sass-loader": "^7.3.1"
   }
 }
